--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,41 @@
-<header class="About">Welcome to My Site!</header>
+<header class="headduh">About Me</header>
 
-<p></p>
-About me. I'm in Oregon going to Oregon State University but not living in Corvallis. Saaaay, what? Online progroam means I get to work out of the comfort of my own home here in Portland. Did an a programming bootcamp at PDX Code Guild earlier in the year year that I used as an introduction into the world of programming.
+<p>
+Hi, my name is Eric and I am Californian living in Oregon going to Oregon State University but not living in Corvallis. What? Online progroam means I get to work out of the comfort of my own home here in Portland. I am doing Oregon State's relatively new Online Post-Baccalaureate Computer Science Program which is one of the only programs that exists in the country. Before enrolling in OSU I did a programming bootcamp at PDX Code Guild during 2015 which I used as a sort of introduction into the world of programming.
 </p>
+
+</br>
+</br>
+
+</br>
+
+
+<h3 class="skills"><i>Technologies Used</i> </h2>
+
+        <div class="tech">
+        <div class="html first"></div>
+        <div class="css first"></div>
+        <div class="js first"></div>
+        <div class="jquery first"></div>
+        </div>
+
+        <div class="tech">
+        <div class="node second"></div>
+        <div class="express second"></div>
+        <div class="python second"></div>
+        <div class="django second"></div>
+        </div>
+        
+        <div class="tech">
+        <div class="php third"></div>
+        <div class="mysql third"></div>
+        <div class="git third"></div>
+        <div class="gulp third"></div>
+        </div>
+
+        <div class="tech">
+        <div class="clang four"></div>
+        <div class="cplus four"></div>
+        <div class="masm four"></div>
+        <div class="vs four"></div>
+        </div>
