--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -2,76 +2,58 @@
 
 <div class="projects">
 
-    These are some of the OSU projects I have done so far along with a few coding samples from PDX Code Guild. CThe plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my CSS skills. {{!--SPLIT UP PROJECTS PER DIV --}}
-    <div id="project1" class="box">
-        <a href="/dom">
-            <div class="overlay">
-                <span class="projcontent">
-                    This was one of the first assignments in my Web Development class which had us manipulating the DOM. 
-            </span>
-            </div>
-        </a>
-    </div>
-    <div id="project2" class="box">
-        <a href="/weather">
-            <div class="overlay">
-                <span class="projcontent">        HW assignment that utilized the Open Weather Map API. Lets a user input a zipcode and the city, temperature, and humidity are returned back. The second part of the assignment was to have a form that submits asynronously via a Post to http://httpbin.org/post</span>
-            </div>
-        </a>
-    </div>
-    <div id="project3" class="box">
-        <a href="http://howto.ericferrer.me/">
-            <div class="overlay">
-                <span class="projcontent">This will be about the HOW TO Guide</span>
-            </div>
-        </a>
-    </div>
-    <div id="project4" class="box">
-        <a href="exercise">
-            <div class="overlay">
-                <span class="projcontent">This will be about the HOW TO Guide Hdfgfdg df dfgd f</span>
-            </div>
-        </a>
-    </div>
-
-    {{!-----------------CODE GUILD SAMPLES ----------------------}}
-    <h3>PDX Code Guild Coding Samples</h3>
-    <div id="project5" class="box">
-        <a href="#">
-            <div class="overlay">
-                <span class="projcontent">Phone Book </span>
-            </div>
-        </a>
-    </div>
-
-
-    <div id="project6" class="box">
-        <a href="">
-            <div class="overlay">
-                <span class="projcontent">Dungeon Crawler </span>
-            </div>
-        </a>
-    </div>
+    These are some of the OSU projects I have done so far along with a few coding samples from PDX Code Guild. The plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my CSS skills.{{!--SPLIT UP PROJECTS PER DIV --}}
     
-        <div id="project7" class="box">
-        <a href="/calculator">
-            <div class="overlay">
-                <span class="projcontent">Calculator - DOOT DOOT DOOT </span>
-            </div>
-        </a>
-    </div>
-    
-        <div id="project8" class="box">
-        <a href="http://eferrer23.pythonanywhere.com/bucketlist/">
-            <div class="overlay">
-                <span class="projcontent">Nope</span>
-            </div>
-        </a>
-    </div>
-    {{!--------------------END OF SPLIT ------------------------}}
+       <ul class="rig columns-2">
+    	<li>
+              <a href="/dom">
+    		<img class="dom"  src="/Dom_tree.png" />
+                  </a>
+    		<p class="hmm"> <strong>DOM Manipulation</strong> <i>HTML, CSS</i></p>
+    	</li>
+    	<li>
+             <a href="/weather">
+    		<img src="weather1.jpg" />
+                                   </a>
+    		<p> <strong>Weather API</strong> <i>HTML, CSS, Open Weather Map API, NodeJs</i></p>
+    	</li>
+    	<li>
+             <a href="http://howto.ericferrer.me/">
+    		<img src="howto.jpg" />
+                  </a>
+    		<p> <strong>API How To Guide</strong> <i>HTML, CSS, TrailApi, NodeJs</i></p>
+    	</li>
+    	<li>
+                         <a href="/exercise">
 
-
-
-
+    		<img src="weight.jpg" />
+            </a>
+    		<p class="dumbbell"> <strong>WorkOut Tracker</strong> <i>HTML, CSS, SQL, NodeJs</i></p>
+    	</li>
+    	<li>
+            <a href="https://github.com/eferrer28/GuildProjects/blob/master/AddressBook/addressbook1.py">
+    		<img src="organizer.jpg" />
+                </a>
+    		<p> <strong>AddressBook</strong> <i>Python</i></p>
+    	</li> 
+    	<li>
+            <a href="https://github.com/eferrer28/GuildProjects/tree/master/Dungeon"> 
+    		<img class= dungeon src="dungeon.png" />
+                </a>
+    		<p class="dungtext"> <strong>Dungeon Crawler</strong> <i>Python</i></p>
+    	</li>
+               	<li>
+                    <a href="/calculator">
+    		<img class= calculator src="calc1.png" />
+                    </a>
+    		<p class="calctext"> <strong>JavaScript Calculator</strong> <i>HTML, CSS, Javascript</i></p>
+    	</li>
+               	<li>
+                     <a href="http://eferrer23.pythonanywhere.com/bucketlist/">
+    		<img class= bucket src="rsz_bucket.jpg" />
+                    </a>
+    		<p class="bucktext"> <strong>Bucket List</strong> <i>HTML, CSS, Python, Django</i></p>
+    	</li>
+    </ul>
 
 </div>
