--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>
@@ -25,11 +26,11 @@
                 <a href="/about"><img src="headshot.jpg" alt="dom" style="width:100px;height:100px;"></a>
             </div>
             <h2 class="name">Eric Ferrer</h2>
-            <span class="tag">CS Student</span>
+            <span class="tag">Computer Science Student</span>
             <nav>
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand"><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
+                    <li  ><a href="/about">About</a></li>
                     <li><a href="/Projects">Projects</a></li>
                     <li><a href="/example">Contact</a></li>
                 </ul>
