--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -4,7 +4,7 @@
 
 
 
-<form action="/" method="post" id="workoform">
+<form action="/exercise" method="post" id="workoform">
     <label for="Your Data">Your Exercise Data:</label>
     <input id="name" type="text" name="name" placeholder="exercise name">
     <input id="reps" type="text" name="reps" placeholder="reps">
