--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -24,11 +24,11 @@
     		<p> <strong>API How To Guide</strong> <i>HTML, CSS, TrailApi, NodeJs</i></p>
     	</li>
     	<li>
-                         <a href="/exercise">
+                         <a href="http://web.engr.oregonstate.edu/~ferrere/340/final/main.php">
 
-    		<img src="weight.jpg" />
+    		<img src="stock.jpg" />
             </a>
-    		<p class="dumbbell"> <strong>WorkOut Tracker</strong> <i>HTML, CSS, SQL, NodeJs</i></p>
+    		<p class="dumbbell"> <strong>Stock Portfolio Database</strong> <i>HTML, Bootstrap, Sql, PHP</i></p>
     	</li>
     	<li>
             <a href="https://github.com/eferrer28/GuildProjects/blob/master/AddressBook/addressbook1.py">
