--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,8 +233,8 @@ ul.rig.columns-4 li {
     margin-top: 2em;
     padding-top: 27px;
 }
-.dumbbell {
-    padding-top: 15px
+.stock {
+    padding-top: 29px
 }
 .dungeon {
     padding-top: 25px;
