--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -26,9 +26,9 @@
     	<li>
                          <a href="http://web.engr.oregonstate.edu/~ferrere/340/final/main.php">
 
-    		<img src="stock.jpg" />
+    		<img src="stock4.jpg" />
             </a>
-    		<p class="dumbbell"> <strong>Stock Portfolio Database</strong> <i>HTML, Bootstrap, Sql, PHP</i></p>
+    		<p class="stock"> <strong>Stock Portfolio Database</strong> <i>HTML, Bootstrap, Sql, PHP</i></p>
     	</li>
     	<li>
             <a href="https://github.com/eferrer28/GuildProjects/blob/master/AddressBook/addressbook1.py">
