--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,9 @@
 
 
     <ul class="workingon">
-        <li>Completing my bachelors Degree! Currently Taking Assembly and Databases</li>
+        <li>Working on completing my bachelor's degree! Only three courses left! </li>
+		<li>Learning Angualar 2 and Ionic</li>
+		<li>Looking for Jobs in the Portland Area</li> 
         <li>Adding content to this site!</li>
         <li>Touching Up Past Projects with CSS</li>
 
