--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,9 +12,10 @@
 
 
     <ul class="workingon">
-        <li>Working on completing my bachelor's degree! Only three courses left! </li>
-		<li>Learning Angualar 2 and Ionic</li>
-		<li>Looking for Jobs in the Portland Area</li> 
+        <li>Looking for Jobs in the Portland Area</li> 
+        <li>Working on completing my bachelor's degree! Only one course left and I finish in March of 2017! </li>
+		<li>Learning Angular 2 and Ionic</li>
+		<li>Working on a blog</li> 
         <li>Adding content to this site!</li>
         <li>Touching Up Past Projects with CSS</li>
 
