--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,8 @@
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand"><a href="/">Home</a></li>
                     <li  ><a href="/about">About</a></li>
+                     <li  ><a href="blog.ericferrer.me/">Blog</a></li>
+
                     <li><a href="/Projects">Projects</a></li>
                     <li><a href="/example">Contact</a></li>
                 </ul>
@@ -40,7 +42,7 @@
                     <a href="https://twitter.com/eferrer222"><i class="fa fa-twitter fa-2x"></i></a>
 
                 </div>
-                
+            </nav>  
                 
                 
         </div>
