--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,7 +31,7 @@
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand"><a href="/">Home</a></li>
                     <li  ><a href="/about">About</a></li>
-                     <li  ><a href="blog.ericferrer.me/">Blog</a></li>
+                     <li  ><a href="http://blog.ericferrer.me/">Blog</a></li>
 
                     <li><a href="/Projects">Projects</a></li>
                     <li><a href="/example">Contact</a></li>
