--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -18,7 +18,7 @@
     		<p> <strong>Weather API</strong> <i>HTML, CSS, Open Weather Map API, NodeJs</i></p>
     	</li>
     	<li>
-             <a href="http://howto.ericferrer.me/">
+             <a href="/underconstruction">
     		<img src="howto.jpg" />
                   </a>
     		<p> <strong>API How To Guide</strong> <i>HTML, CSS, TrailApi, NodeJs</i></p>
