--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -49,7 +49,7 @@
     		<p class="calctext"> <strong>JavaScript Calculator</strong> <i>HTML, CSS, Javascript</i></p>
     	</li>
                	<li>
-                     <a href="http://eferrer23.pythonanywhere.com/bucketlist/">
+                     <a href="/underconstruction">
     		<img class= bucket src="rsz_bucket.jpg" />
                     </a>
     		<p class="bucktext"> <strong>Bucket List</strong> <i>HTML, CSS, Python, Django</i></p>
