--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
                      <li  ><a href="http://blog.ericferrer.me/">Blog</a></li>
 
                     <li><a href="/Projects">Projects</a></li>
-                    <li><a href="/example">Contact</a></li>
+                    <li><a href="/underconstruction">Contact</a></li>
                 </ul>
                 <div class="icons">
                     <a href="https://github.com/eferrer28"><i class="fa fa-github fa-2x"></i></a>
