--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,10 +12,9 @@
 
 
     <ul class="workingon">
-        <li>Looking for Jobs in the Portland Area</li> 
-        <li>Working on completing my bachelor's degree! Only one course left and I finish in March of 2017! </li>
-		<li>Learning Angular 2 and Ionic</li>
-		<li>Working on a blog</li> 
+        <li>Just finished my computer science degree from Oregon State!</li>
+		<li>Learning Ionic through the Ionic Academy</li>
+    <li>Learning Drupal</li>
         <li>Adding content to this site!</li>
         <li>Touching Up Past Projects with CSS</li>
 
@@ -24,3 +23,14 @@
     </ul>
 
 </article>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97177748-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
