--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -3,7 +3,7 @@
 <div class="projects">
 
     These are some of the OSU projects I have done so far along with a few coding samples from PDX Code Guild. The plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my CSS skills.{{!--SPLIT UP PROJECTS PER DIV --}}
-    
+
        <ul class="rig columns-2">
     	<li>
               <a href="/dom">
@@ -35,9 +35,9 @@
     		<img src="organizer.jpg" />
                 </a>
     		<p> <strong>AddressBook</strong> <i>Python</i></p>
-    	</li> 
+    	</li>
     	<li>
-            <a href="https://github.com/eferrer28/GuildProjects/tree/master/Dungeon"> 
+            <a href="https://github.com/eferrer28/GuildProjects/tree/master/Dungeon">
     		<img class= dungeon src="dungeon.png" />
                 </a>
     		<p class="dungtext"> <strong>Dungeon Crawler</strong> <i>Python</i></p>
@@ -57,3 +57,14 @@
     </ul>
 
 </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97177748-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
