--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -25,7 +25,7 @@ Hi, my name is Eric and I am Californian living in Oregon going to Oregon State 
         <div class="python second"></div>
         <div class="django second"></div>
         </div>
-        
+
         <div class="tech">
         <div class="php third"></div>
         <div class="mysql third"></div>
@@ -39,3 +39,15 @@ Hi, my name is Eric and I am Californian living in Oregon going to Oregon State 
         <div class="masm four"></div>
         <div class="vs four"></div>
         </div>
+
+
+        <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97177748-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
