--- a/views/calculator.handlebars
+++ b/views/calculator.handlebars
@@ -6,7 +6,7 @@
                <td colspan="4">
                <input class="output "type="text" name="output" value="" ></td>
             </tr>
-        
+
         <tr class="firstrow">
             <td>
                 <input class="clearentry" type="submit" name="clearsentry" value="CE">
@@ -83,3 +83,13 @@
 
 
 <script src="/js/calcscript.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97177748-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
