--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -2,9 +2,38 @@
 
 <div class="projects">
 
-    These are some of the OSU projects I have done so far along with a few coding samples from PDX Code Guild. The plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my CSS skills.{{!--SPLIT UP PROJECTS PER DIV --}}
+    These are some of the OSU projects I did while at my time at university. I just added the employee recognition application which was my capstone project.
+    I am planning on adding more projects very soon!
+    {{!--SPLIT UP PROJECTS PER DIV --}}
 
        <ul class="rig columns-2">
+         <li>
+                  <a href="http://web.engr.oregonstate.edu/~ferrere/496/20161202_172312.mp4">
+           <img class="dom"  src="budget.jpg" />
+                      </a>
+           <p class="hmm"> <strong>Budget App</strong> <i>Ionic, Angular 2, MongoDb, Firebase, Node.JS</i></p>
+         </li>
+         <li>
+                 <a href="https://github.com/eferrer28/FTP">
+           <img src="ftp.jpg" />
+                                       </a>
+           <p> <strong>FTP Server</strong> <i>Python, C++</i></p>
+         </li>
+
+         <li>
+                 <a href="http://rocky-ridge-55037.herokuapp.com/">
+           <img src="emprec.jpg" />
+                      </a>
+           <p> <strong>Employee Recognition</strong> <i>Ruby, Rails, Bootstrap, Postgres</i></p>
+           <p><strong>Login:</strong>   admin@admin.com/1234567890
+         </li>
+         <li>
+                             <a href="http://web.engr.oregonstate.edu/~ferrere/340/final/main.php">
+
+           <img src="stock4.jpg" />
+                </a>
+           <p class="stock"> <strong>Stock Portfolio Database</strong> <i>HTML, Bootstrap, Sql, PHP</i></p>
+         </li>
     	<li>
               <a href="/dom">
     		<img class="dom"  src="/Dom_tree.png" />
@@ -17,19 +46,10 @@
                                    </a>
     		<p> <strong>Weather API</strong> <i>HTML, CSS, Open Weather Map API, NodeJs</i></p>
     	</li>
-    	<li>
-             <a href="/underconstruction">
-    		<img src="howto.jpg" />
-                  </a>
-    		<p> <strong>API How To Guide</strong> <i>HTML, CSS, TrailApi, NodeJs</i></p>
-    	</li>
-    	<li>
-                         <a href="http://web.engr.oregonstate.edu/~ferrere/340/final/main.php">
 
-    		<img src="stock4.jpg" />
-            </a>
-    		<p class="stock"> <strong>Stock Portfolio Database</strong> <i>HTML, Bootstrap, Sql, PHP</i></p>
-    	</li>
+
+
+
     	<li>
             <a href="https://github.com/eferrer28/GuildProjects/blob/master/AddressBook/addressbook1.py">
     		<img src="organizer.jpg" />
