fixed twitter links

--- a/views/SkyVerge.handlebars
+++ b/views/SkyVerge.handlebars
@@ -1,48 +1,79 @@
-<h2>Where are you located?<h2>
+
+<h1>Answers for SkyVerge Application</h1>
+
+<p>Links for github, linkedin, and twitter can all be found on the side menu<p>
+
+<h1>Part 2</h1>
+
+
+<h2>Where are you located?</h2>
 
 <p>Currently living in Portland, OR but once the summer is over I may consider moving as this past winter
   was a bit rough on me.
 
-<h2>Why are you looking for a new position?<h2>
+<h2>Why are you looking for a new position?</h2>
 
   <p>I just finished my degree and am currently unemployed and wanted an opportunity where I can continue
-    to build on my HTML/CSS/JavaScript skills while also working with customers on the daily
+    to build on my HTML/CSS/JavaScript skills while also working with customers on the daily.<p>
 
-<h2>Can you summarize your remote work experience?<h2>
+<h2>Can you summarize your remote work experience?</h2>
 
 <p>My remote work experience comes in the form of my schooling. I just completed a postbac Computer Science program from Oregon
   State and the whole program was done online. I really enjoyed this setting and working with my fellow students worked pretty
   flawlessly due to our heavy use of hangouts/slack and git.
 
-<h2>What should we definitely look at in your resume/work experience?
+<h2>What should we definitely look at in your resume/work experience?</h2>
 
-<h2>What’s not on your resume/work experience but you think we should know?
+<p>I just a made a twitter bot last night so you can check that out so I know at least someone has looked at it.
+  You can click on the twitter icon on the left to take you there. Also feel free to browse my site.
+
+<h2>What’s not on your resume/work experience but you think we should know?</h2>
 
   <p>During the recession I had trouble finding work so I left the country for what I thought was going to be a few
-    month but ended up turning into almost two years. That would be the time I had taste for traveling.
+    months but ended up turning into almost two years. That would be the time I discovered my taste for traveling.
 
-  <h2>Can you summarize your HTML/CSS/JavaScript knowledge?
+  <h2>Can you summarize your HTML/CSS/JavaScript knowledge?</h2>
 
-    I first learned these skills in a full stack bootcamp here in Portland a couple of years ago and continued practicing
+    <p>I first learned these skills in a full stack bootcamp here in Portland a couple of years ago and continued practicing
     on my own during Oregon State's computer science program. The program did have a web development course and a few other
-    courses where I was able to work on these technolgies.
+    courses where I was able to continue working on these technolgies.
 
-<h2>Why do you think you’re a good fit for this role?
+<h2>Why do you think you’re a good fit for this role?</h2>
 
-I am good fit for this role because I fit the skillset you are looking for and the company itself seems like it's
-everything that I am looking for in a company.
+<p>I am good fit for this role because I fit the skillset you are looking for and the company itself seems like it's
+everything that I am looking for in a company. I love ecommerce and always thought at some point in my life I would
+get into it whether it was as a small business owner or working for a company.
 
+<h2>Anything else we should know about you?</h2>
 
-<h1>Part 3<h1>
-
-<h2>Pre-Sales<h2>
-
-
-
-<h2>Fire Alarm<h2>
+<p>I would be lying if I said a large part of why I wanted this role was because it was a remote job but I really feel
+  like it is a good match as I feel I more than have the technical aptitude. I have some experience with Ruby and Php
+  and would not mind continuing to build on these skills at my time at SkyVerge.
 
 
-<h2>Step-by-Step<h2>
+<h1>Part 3</h1>
+
+<h2>Pre-Sales</h2>
+
+<h3>Imagine a potential customer emails you with the following question. We don’t yet offer this feature, but their current solution does. How would you respond?</h3>
+
+<p><p>
+
+<i>"Hi Customer! Unfortunately our application does not at this time allow live image previews but that is a really awesome idea for a feature
+that I myself wouldn't mind being implemented. We are always working on new features and your feedback will not fall on deaf
+ears."</i>
+
+<h2>Fire Alarm</h2>
+
+<h3>Imagine you’ve just started your workday. You login and see a large number of emails from distraught customers. Clearly, something is happening. What steps do you take?/</h3>
+
+<p>I would first read the first few emails to get a general sense of what is going on. Since every thing that is happening
+  seems to be a dumpster fire then I would imagine a few people in the company would know what is going on. I would get in
+  contact with my co-workers to see what exactly the problem is, how it happened, and find out the ETA of when everything will
+  be back to normal. From there I would get back to the emails and start letting each customer know that the issues are being
+  addressed and apolgize for any inconvenience.
+
+<h2>Step-by-Step</h2>
 
   <p>The last thing I purchased were a pair of converse from shoebuy. Whenever I buy clothes or a pair of shoes I will usually
   only buy something if it is on sale. The first place I check is the promotions on gmail to see if there any discounts or sales
