--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,6 +12,7 @@
 
 
     <ul class="workingon">
+      <li>Just finished a python twitter bot that spits out random number facts</li>
         <li>Just finished my computer science degree from Oregon State!</li>
 		<li>Learning Ionic through the Ionic Academy</li>
     <li>Learning Drupal</li>
