--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
                 <a href="/about"><img src="headshot.jpg" alt="dom" style="width:100px;height:100px;"></a>
             </div>
             <h2 class="name">Eric Ferrer</h2>
-            <span class="tag">Computer Science Student</span>
+            <span class="tag"><del>Computer Science Student</del></span>
             <nav>
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand"><a href="/">Home</a></li>
@@ -39,7 +39,7 @@
                 <div class="icons">
                     <a href="https://github.com/eferrer28"><i class="fa fa-github fa-2x"></i></a>
                     <a href="https://www.linkedin.com/in/eric-ferrer-ab953630"><i class="fa fa-linkedin fa-2x"></i></a>
-                    <a href="https://twitter.com/eferrer222"><i class="fa fa-twitter fa-2x"></i></a>
+                    <a href="https://twitter.com/EricsNumberBot"><i class="fa fa-twitter fa-2x"></i></a>
 
                 </div>
             </nav>
