--- a/views/SkyVerge.handlebars
+++ b/views/SkyVerge.handlebars
@@ -81,4 +81,4 @@ ears."</i>
   getting discounts. If there is nothing of interest in the promotions tab then I head over to reddit and visit a few subreddits to
   look for any discounts on items that may be of interest to me. If there is nothing there then I usually go to the website I am
   planning on buying from and look at the price. I cross check this price with ebay and compare the two. Ebay usually wins more
-  often then not.
+  often then not.</p>
