touching projects page

--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -8,16 +8,10 @@
 
        <ul class="rig columns-2">
          <li>
-                  <a href="http://web.engr.oregonstate.edu/~ferrere/496/20161202_172312.mp4">
-           <img class="dom"  src="budget.jpg" />
+                  <a href="https://twitter.com/EricsNumberBot">
+           <img class="dom"  src="numbers.png" />
                       </a>
-           <p class="hmm"> <strong>Budget App</strong> <i>Ionic, Angular 2, MongoDb, Firebase, Node.JS</i></p>
-         </li>
-         <li>
-                 <a href="https://github.com/eferrer28/FTP">
-           <img src="ftp.jpg" />
-                                       </a>
-           <p> <strong>FTP Server</strong> <i>Python, C++</i></p>
+           <p class="hmm"> <strong>Twitter Bot</strong> <i>Python</i></p>
          </li>
 
          <li>
@@ -27,6 +21,25 @@
            <p> <strong>Employee Recognition</strong> <i>Ruby, Rails, Bootstrap, Postgres</i></p>
            <p><strong>Login:</strong>   admin@admin.com/1234567890
          </li>
+
+
+         <li>
+                  <a href="http://web.engr.oregonstate.edu/~ferrere/496/20161202_172312.mp4">
+           <img class="dom"  src="budget.jpg" />
+                      </a>
+           <p class="hmm"> <strong>Budget App</strong> <i>Ionic, Angular 2, MongoDb, Firebase, Node.JS</i></p>
+         </li>
+
+
+
+         <li>
+                 <a href="https://github.com/eferrer28/FTP">
+           <img src="ftp.jpg" />
+                                       </a>
+           <p> <strong>FTP Server</strong> <i>Python, C++</i></p>
+         </li>
+
+
          <li>
                              <a href="http://web.engr.oregonstate.edu/~ferrere/340/final/main.php">
 
@@ -34,18 +47,35 @@
                 </a>
            <p class="stock"> <strong>Stock Portfolio Database</strong> <i>HTML, Bootstrap, Sql, PHP</i></p>
          </li>
+
+
     	<li>
               <a href="/dom">
     		<img class="dom"  src="/Dom_tree.png" />
                   </a>
     		<p class="hmm"> <strong>DOM Manipulation</strong> <i>HTML, CSS</i></p>
     	</li>
+
+
     	<li>
              <a href="/weather">
     		<img src="weather1.jpg" />
                                    </a>
     		<p> <strong>Weather API</strong> <i>HTML, CSS, Open Weather Map API, NodeJs</i></p>
     	</li>
+
+      <li>
+          <a href="/calculator">
+<img class= calculator src="calc1.png" />
+          </a>
+<p class="calctext"> <strong>JavaScript Calculator</strong> <i>HTML, CSS, Javascript</i></p>
+</li>
+<li>
+        <a href="/dom">
+  <img class="dom"  src="/Dom_tree.png" />
+            </a>
+  <p class="hmm"> <strong>DOM Manipulation</strong> <i>HTML, CSS</i></p>
+</li>
 
 
 
@@ -62,18 +92,7 @@
                 </a>
     		<p class="dungtext"> <strong>Dungeon Crawler</strong> <i>Python</i></p>
     	</li>
-               	<li>
-                    <a href="/calculator">
-    		<img class= calculator src="calc1.png" />
-                    </a>
-    		<p class="calctext"> <strong>JavaScript Calculator</strong> <i>HTML, CSS, Javascript</i></p>
-    	</li>
-               	<li>
-                     <a href="/underconstruction">
-    		<img class= bucket src="rsz_bucket.jpg" />
-                    </a>
-    		<p class="bucktext"> <strong>Bucket List</strong> <i>HTML, CSS, Python, Django</i></p>
-    	</li>
+
     </ul>
 
 </div>
