forgot to add route

--- a/views/ionicprojects.handlebars
+++ b/views/ionicprojects.handlebars
@@ -3,5 +3,5 @@
 <div class="projects">
 
   I am registered with Ionic Academy and they have a list of projects listed there for you to test your skills.
-  In time I hope to have a few of those listed here. Apolgies in advance for the todo list application that is
+  In time I hope to have a few of those listed here. Apologies in advance for the todo list application that is
   going to make an appearance.
